force-app/main/default/objects/Job_Application__c/Job_Application__c.object-meta.xml
<CustomObject>
    <description>This capstone project is a comprehensive solution that keeps track of job applications for users in Salesforce. It will demonstrate your proficiency in various aspects of Salesforce development, from basic programming concepts and classes to asynchronous Apex, LWC, and integrations. The goal is to be able to track job applications that are found on multiple job boards/sites and synthesize relevant components into one location. This system should manage the entire job application lifecycle.</description>
    <label>Job Application</label>
    <nameField>
        <displayFormat>Job-{0000}</displayFormat>
        <label>Job Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>