force-app/main/default/objects/Job_Application__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field on Account Object to store the name of the company where the job application is being sent.</description>
    <inlineHelpText>Enter the Name of The Company or Create one if it is not already</inlineHelpText>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>