force-app/main/default/objects/Job_Application__c/fields/Hiring_Path__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Path__c</fullName>
    <label>Hiring Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>