force-app/main/default/objects/Job_Application__c/fields/Job_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_URL__c</fullName>
    <description>URL: A URL field to store the web link of the job posting.</description>
    <inlineHelpText>Enter the URL where the job is posted</inlineHelpText>
    <label>Job URL</label>
    <type>Url</type>
</CustomField>