force-app/main/default/objects/Job_Application__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>A text/picklist field to indicate the job location or if it&apos;s remote.</description>
    <inlineHelpText>field to indicate the job location or if it&apos;s remote.</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Atlanta</fullName>
                <default>true</default>
                <label>Atlanta</label>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Huntsville</fullName>
            </value>
            <value>
                <fullName>Raleigh</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>