force-app/main/default/objects/Job_Application__c/fields/Matched_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Matched_Object_Id__c</fullName>
    <externalId>true</externalId>
    <label>Matched Object Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>