force-app/main/default/objects/Job_Application__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Notes: A text field that can hold a lot of information.
Primary Contact: Lookup to a Contact that represents the main point of contact for the job. This could be a recruiter or employee at the company.</description>
    <inlineHelpText>Contact that represents the main point of contact for the job. This could be a recruiter or employee at the company.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>