force-app/main/default/objects/Job_Application__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Rating: A picklist or numerical field to rate the attractiveness of the job on a predetermined scale, for example, 1-5.</description>
    <inlineHelpText>Rating: A picklist or numerical field to rate the attractiveness of the job on a predetermined scale, for example, 1-5.</inlineHelpText>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1 - Dream</fullName>
            </value>
            <value>
                <fullName>2 -</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>