force-app/main/default/objects/Job_Application__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <defaultValue>1</defaultValue>
    <description>A numerical field to capture the expected salary for the job position.</description>
    <inlineHelpText>Expected Salary for the position</inlineHelpText>
    <label>Salary</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>